--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,96 @@
 body {
-    margin-top: 50px; /* Required margin for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
+    flex: 1;
+    flex-direction: 'column';
+    justify-content: 'center'
 }
 
-.image-bg-fluid-height,
-.image-bg-fixed-height {
+h1 {
+    font-size: 5.4em
+}
+
+h2 {
+    font-size: 4em
+}
+
+h3 {
+    font-size: 3.2em
+}
+
+h4 {
+    font-size: 2.4em
+}
+
+h5 {
+    font-size: 2em
+}
+
+h6 {
+    font-size: 1.4em
+}
+
+.section-wrapper {
+    max-width: 1200px;
+    margin:auto;
+}
+
+.block {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bg-orange {
+    background-color: #EB6D47;
+}
+
+.row-parent {
+    flex-direction: row;
+    flex-wrap: wrap;
+    display: flex;
+    background-color: grey
+}
+
+.mobile-image {
+    min-height: 440px;
+    height: 70vh;
+}
+
+.info-inner {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+}
+
+.text-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 20px 0 20px;
     text-align: center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    -o-background-size: cover;
+}
+
+.navbar {
+    min-height: 140px;
+    background-color: white;
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    margin-bottom: 0;
+}
+
+.backdrop {
+    background-color: #EB6D47;
+    height: calc(100vh - 140px);
+    min-height: 768px;
+    display: flex;
 }
 
 .image-bg-fluid-height {
@@ -50,6 +132,61 @@ footer {
     float: right
 }
 
+.white-text {
+    color: white 
+}
+
+.grey-text {
+    color: grey
+}
+
+.bold {
+    font-weight: bold
+}
+
+.item-margin {
+    margin-top: 20px;
+}
+
+.text-input {
+    border-radius: 0;
+    width: 60%;
+    height: 50px;
+    font-size: 24px;
+}
+
+.button {
+    background-color: #EB6D47;
+    border-radius: 10px;
+    border-width: 2px;
+    border-color: white;
+    height: 50px;
+    width: 50%;
+    font-size: 18px;
+}
+
+.button:hover {
+    background-color: white;
+    color: #EB6D47;
+    border: none;
+}
+
+.form-content {
+    flex: 1;
+    display: flex;
+    flex-wrap: wrap;
+    align-self: stretch;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 @media(max-width:768px) {
     section {
         padding-top: 25px;
@@ -58,5 +195,16 @@ footer {
 
     .section-heading {
         font-size: 2em;
+    }
+
+    .logo, .navbar, .flex-center {
+        width: 100vw;
+        flex-wrap: wrap;
+    } 
+    
+    .title-text {
+        padding: 20px;
+        padding-bottom: 40px;
+        text-align: center;
     }
 }
