--- a/css/style.css
+++ b/css/style.css
@@ -269,7 +269,7 @@ footer {
     border: 1px solid grey;
     padding: 20px;
     text-align: center;
-    min-height: 320px;
+    min-height: 400px;
 }
 
 .card-scroll {
@@ -312,6 +312,10 @@ footer {
 
 .no-margin {
     margin: 0
+}
+
+.mh-340 {
+    min-height: 340px;
 }
 
 .text-input {
